CaaSComponent nodeSelectors as Map<String, String>